force-app/main/default/objects/Affiliation__c/Affiliation__c.object-meta.xml
<CustomObject>
    <description>Certain products know the Affiliations history of a user.</description>
    <label>Work History</label>
    <nameField>
        <displayFormat>AF-{00000}</displayFormat>
        <label>Work History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>