force-app/main/default/objects/Affiliation__c/fields/Affiliations__c.field-meta.xml
<CustomField>
    <fullName>Affiliations__c</fullName>
    <label>Work History</label>
    <length>255</length>
    <type>Text</type>
</CustomField>