force-app/main/default/objects/Affiliation__c/fields/Alternate_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alternate Email</label>
    <referenceTo>Alternate_Email__c</referenceTo>
    <relationshipLabel>Work History</relationshipLabel>
    <relationshipName>Work_History</relationshipName>
    <type>Lookup</type>
</CustomField>