force-app/main/default/objects/Affiliation__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>Please enter a date till when you were associated with this Organization</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>