force-app/main/default/objects/Affiliation__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <description>Organization of the affiliation</description>
    <inlineHelpText>Please select an Organization for this affiliation</inlineHelpText>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Work History</relationshipLabel>
    <relationshipName>Affiliations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>