force-app/main/default/objects/Affiliation__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date from when Lead/Contact started affiliation with the Organization</description>
    <inlineHelpText>Please enter a date from when you started affiliation with this Organization</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>